<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".SelectionActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_48_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/logo_width_splash"
            android:layout_height="@dimen/logo_height_splash"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/margin_136_dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/image"
            android:transitionName="imageTransition" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_marginTop="@dimen/margin_18_dp"
            android:gravity="center"
            android:text="@string/saturday_coding_challenge"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/LoginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text1"
            android:layout_marginStart="@dimen/margin_18_dp"
            android:layout_marginTop="@dimen/margin_36_dp"
            android:layout_marginEnd="@dimen/margin_18_dp"
            android:layout_marginBottom="@dimen/margin_18_dp"
            android:background="@drawable/round_corner_green"
            android:fontFamily="@font/ubuntu_mono_r"
            android:gravity="center"
            android:text="@string/log_in"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_24_sp" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LoginBtn"
            android:fontFamily="@font/roboto_thin"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/text_size_18_sp" />

        <Button
            android:id="@+id/SignUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text2"
            android:layout_margin="@dimen/margin_18_dp"
            android:background="@drawable/round_corner_green"
            android:fontFamily="@font/ubuntu_mono_r"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_24_sp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>